Create Page Layout

--- a/Free_code_camp/Product_landing_page/index.html
+++ b/Free_code_camp/Product_landing_page/index.html
@@ -6,7 +6,46 @@
 </head>
 
 <body>
+	<div class="up_button">Up</div>
+	<section class="main_sect">
+		<nav>
+			<a href="#">Features</a>
+			<a href="#">Prices</a>
+			<a href="#">Sign Up</a>
+		</nav>
+		<h1>PRODUCT NAME</h1>
+	</section>
 	
+	<section class="features_sect">
+			<div class="features_image"></div>
+			<div class="features_name">
+				FEATURES
+				<div class="feature_cont">
+					<div class="feature_det">Thing 1</div>
+					<div class="feature_det">Thing 2</div>
+					<div class="feature_det">Thing 3</div>
+					<div class="feature_det">Thing 4</div>
+				</div>
+				<div class="more_button">FIND OUT MORE</div>
+			</div>
+	</section>
+	
+	<section class="prices_sect">
+			<div class="prices">
+				Prices
+				<div class="price_det">Price 1</div>
+				<div class="price_det">Price 2</div>
+				<div class="price_det">Price 3</div>
+			</div>
+			<div class="prices_image"></div>
+	</section>
+	
+	<section class="signup_sect">
+		Signup for Updates
+		<input type="text">
+	</section>
+	
+	<footer></footer>
 </body>
 
 
