Style Main Section

--- a/Free_code_camp/Product_landing_page/index.html
+++ b/Free_code_camp/Product_landing_page/index.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<title>Product Launch Page</title>
 	<link rel="stylesheet" type="text/css" href="styles/style.css"> 
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+	<script src="https://use.fontawesome.com/f37781fe0a.js"></script>
 	<script src="scripts/script.js"></script>
 </head>
 
 <body>
-	<div class="up_button">Up</div>
+	<div class="up_button"><i class="fa fa-chevron-up"></i></div>
 	<section class="main_sect">
+		<div class="logo">Camera Company</div>
 		<nav>
 			<a href="#">Features</a>
 			<a href="#">Prices</a>
 			<a href="#">Sign Up</a>
 		</nav>
-		<h1>PRODUCT NAME</h1>
+		<h1>CAPTURING THE MOMENTS <br>IN YOUR LIFE</h1>
 	</section>
 	
 	<section class="features_sect">
