Style Sign Up Section

--- a/Free_code_camp/Product_landing_page/index.html
+++ b/Free_code_camp/Product_landing_page/index.html
@@ -26,6 +26,7 @@
 			</div>
 			<div class="features_name">
 				<h2>Features</h2>
+				<!--ADD TEXT ABOUT FEATURES -->
 				<div class="feature_cont">
 					<div class="feature_det">
 						<img src="images/plus.png" class="symbol">
@@ -64,7 +65,7 @@
 		Get the latest updates as soon as they are released<br>
 		<form>
 			<input type="text" value="Enter your email">
-			<input type="submit">
+			<input type="submit" value="SUBMIT">
 		</form>
 	</section>
 	
