Style Features Section

--- a/Free_code_camp/Product_landing_page/index.html
+++ b/Free_code_camp/Product_landing_page/index.html
@@ -26,7 +26,7 @@
 			</div>
 			<div class="features_name">
 				<h2>Features</h2>
-				<!--ADD TEXT ABOUT FEATURES -->
+				<p>Our new release camera comes with a range of cutting edge features to help you capture the most important moments in life</p>
 				<div class="feature_cont">
 					<div class="feature_det">
 						<img src="images/plus.png" class="symbol">
@@ -39,7 +39,7 @@
 						Water Resistance</div>
 					<div class="feature_det">
 						<img src="images/truck.png" class="symbol">
-						Delivery Within Three Days</div>
+						Delivery Within Three<br>Days</div>
 				</div>
 				<div class="more_cont">
 					<a href="#">
