Complete Features Section

--- a/Free_code_camp/Product_landing_page/index.html
+++ b/Free_code_camp/Product_landing_page/index.html
@@ -13,14 +13,14 @@
 	<section class="main_sect" id="top">
 		<div class="logo">COMPANY LOGO</div>
 		<nav>
-			<a href="#">Features</a>
-			<a href="#">Prices</a>
-			<a href="#">Sign Up</a>
+			<a href="#features">Features</a>
+			<a href="#prices">Prices</a>
+			<a href="#sign_up">Sign Up</a>
 		</nav>
 		<h1>CAPTURING THE MOMENTS <br>IN YOUR LIFE</h1>
 	</section>
 	
-	<section class="features_sect">
+	<section class="features_sect" id="features">
 			<div class="features_image">
 				<img id="camera_1" src="images/camera_1.jpg" alt="camera">
 			</div>
@@ -39,7 +39,13 @@
 						Water Resistance</div>
 					<div class="feature_det">
 						<img src="images/truck.png" class="symbol">
-						Delivery Within Three<br>Days</div>
+						Speedy Delivery</div>
+					<div class="feature_det">
+						<img src="images/truck.png" class="symbol">
+						Other Feature</div>
+					<div class="feature_det">
+						<img src="images/truck.png" class="symbol">
+						Other Feature</div>
 				</div>
 				<div class="more_cont">
 					<a href="#">
@@ -50,9 +56,10 @@
 			</div>
 	</section>
 	
-	<section class="prices_sect">
+	<section class="prices_sect" id="prices">
 			<div class="prices">
 				<h2>Prices</h2>
+				<p>We have a range of prices to suit any budget, from hobbyist to professional</p>
 				<div class="price_det">Price 1</div>
 				<div class="price_det">Price 2</div>
 				<div class="price_det">Price 3</div>
@@ -60,7 +67,7 @@
 			<div class="prices_image"></div>
 	</section>
 	
-	<section class="signup_sect">
+	<section class="signup_sect" id="sign_up">
 		<h2>Signup</h2>
 		Get the latest updates as soon as they are released<br>
 		<form>
