--- a/Free_code_camp/Product_landing_page/index.html
+++ b/Free_code_camp/Product_landing_page/index.html
@@ -22,7 +22,7 @@
 	
 	<section class="features_sect" id="features">
 			<div class="features_image">
-				<img id="camera_1" src="images/camera_1.jpg" alt="camera">
+				<img id="camera_1" src="images/camera_1.jpg" alt="front view of camera">
 			</div>
 			<div class="features_name">
 				<h2>Features</h2>
@@ -41,11 +41,11 @@
 						<img src="images/truck.png" class="symbol">
 						Speedy Delivery</div>
 					<div class="feature_det">
-						<img src="images/truck.png" class="symbol">
-						Other Feature</div>
+						<img src="images/macro.png" class="symbol">
+						Macro Lens Included</div>
 					<div class="feature_det">
-						<img src="images/truck.png" class="symbol">
-						Other Feature</div>
+						<img src="images/wifi.png" class="symbol">
+						Wireless Enabled</div>
 				</div>
 				<div class="more_cont">
 					<a href="#">
@@ -60,11 +60,25 @@
 			<div class="prices">
 				<h2>Prices</h2>
 				<p>We have a range of prices to suit any budget, from hobbyist to professional</p>
-				<div class="price_det">Price 1</div>
-				<div class="price_det">Price 2</div>
-				<div class="price_det">Price 3</div>
+				<div class="price_det">
+					<h3>Base Model</h3>
+					<p><span class="dollar">$</span>400</p>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus odio elit.
+				</div>
+				<div class="price_det">
+					<h3>Hobbyist Bundle</h3>
+					<p><span class="dollar">$</span>850</p>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus odio elit, tincidunt vitae hendrerit ut.
+				</div>
+				<div class="price_det">
+					<h3>Professional Package</h3>
+					<p><span class="dollar">$</span>1200</p>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus odio elit, tincidunt vitae hendrerit ut, aliquet at ligula. 
+				</div>
 			</div>
-			<div class="prices_image"></div>
+			<div class="prices_image">
+				<img id="camera_2" src="images/camera_2.jpg" alt="Back view of Camera">
+			</div>
 	</section>
 	
 	<section class="signup_sect" id="sign_up">
