Layout Opening Section

--- a/Free_code_camp/Portfolio/index.html
+++ b/Free_code_camp/Portfolio/index.html
@@ -4,21 +4,23 @@
 <head>
   <title>Portfolio</title>
   <link rel="stylesheet" type="text/css" href="styles/style.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="scripts/script.js"></script>
   <script src="https://use.fontawesome.com/f37781fe0a.js"></script>
 </head>
   
 <body>
   <!-- Main Header -->
-  <section class="box">
+  <section class="main_section">
     <nav>
-      <a href="#">Home</a>
-      <a href="#">Work</a>
-      <a href="#">About</a>
+      <a href="#">ABOUT</a>
+      <a href="#">WORK</a>
+	  <a href="#">HOME</a>
     </nav>
-  Main
-  <div>View Work</div>
-  <div><i class="fa fa-chevron-down"></i></div>
+  
+  <h1>Persons Name</h1>
+  	<div class="button">View Work</div>
+   <div><i class="fa fa-chevron-down fa-2x main_down"></i></div>
   </section>
   
   <!-- Portfolio -->
