--- a/Free_code_camp/Portfolio/index.html
+++ b/Free_code_camp/Portfolio/index.html
@@ -27,17 +27,28 @@
   
   <!-- Portfolio -->
   <section class="portfolio_section" id="portfolio_sec">
-      <div class="port_details">
-          Portfolio Heading
-		  Text about Portfolio
-	      Project Name
-		  Project Details
-      </div>
-      <div class="port_images">
-		  Image
-		  <div>Launch Site</div>
-      </div>
-    <div>Navigation Bar</div>
+	  <div class="portfolio">
+		  <div class="port_details">
+			  <h2>Portfolio Heading</h2>
+			  <p>Chase red laser dot pose purrfectly to show my beauty yet annoy kitten brother with poking or freak human out make funny noise mow mow mow mow mow mow success</p>
+			  <h3>Project Name</h3>
+			  <p>Chase red laser dot pose purrfectly to show my beauty yet annoy kitten brother with poking or freak human out make funny noise mow mow mow mow mow mow success<br>
+			  <strong>Langauges Used:</strong>Chase, red, laser, dot
+			  </p>
+		  </div>
+		  <div class="port_images">
+			  <img src="http://via.placeholder.com/450x350">
+		  <div class="button">Launch Site</div>
+		  </div>
+	  </div>
+    <div class="nav_bar">Navigation Bar
+	  <i class="fa fa-caret-left"></i>
+	  <i class="fa fa-circle"></i>
+	  <i class="fa fa-circle"></i>
+	  <i class="fa fa-circle"></i>
+	  <i class="fa fa-circle"></i>
+	  <i class="fa fa-caret-right"></i>
+	  </div>
     <a href="#main_sec">
 		<i class="fa fa-chevron-up fa-2x arrow_left"></i>
 	</a>	  
@@ -65,6 +76,9 @@
   
   <!-- Contact Side Bar -->
   <div>Side Bar</div>
+	<i class="fa fa-phone" aria-hidden="true"></i>
+	<i class="fa fa-github" aria-hidden="true"></i>
+	<i class="fa fa-envelope" aria-hidden="true"></i>
   
   <!-- Footer -->
   <footer>Portfolio of...</footer>
