--- a/Free_code_camp/Portfolio/index.html
+++ b/Free_code_camp/Portfolio/index.html
@@ -4,6 +4,7 @@
 <head>
   <title>Portfolio</title>
   <link rel="stylesheet" type="text/css" href="styles/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="scripts/script.js"></script>
   <script src="https://use.fontawesome.com/f37781fe0a.js"></script>
@@ -13,12 +14,13 @@
   <!-- Main Header -->
   <section class="main_section" id="main_sec">
     <nav>
-      <a href="#about_sec">ABOUT</a>
-      <a href="#portfolio_sec">WORK</a>
-	  <a href="#main_sec">HOME</a>
+      <a href="#about_sec">About</a>
+      <a href="#portfolio_sec">Work</a>
+	  <a href="#main_sec">Home</a>
     </nav>
   
-  <h1>Persons Name</h1>
+  <h1>Annie Howard</h1>
+  <h2>WEB DEVELOPER</h2>
   	<div class="button">View Work</div>
     <a href="#portfolio_sec">
 	  <i class="fa fa-chevron-down fa-2x arrow_right"></i>
@@ -41,7 +43,7 @@
 		  <div class="button">Launch Site</div>
 		  </div>
 	  </div>
-    <div class="nav_bar">Navigation Bar
+    <div class="nav_bar">
 	  <i class="fa fa-caret-left"></i>
 	  <i class="fa fa-circle"></i>
 	  <i class="fa fa-circle"></i>
@@ -61,27 +63,33 @@
   <section class="about_section" id="about_sec">
 	<div class="about">
     	<div class="about_details">
-		  About
-		  Text
-		  Contact Details
+		  <h2>About</h2>
+		  <p>Chase red laser dot pose purrfectly to show my beauty yet annoy kitten brother with poking or freak human out make funny noise mow mow mow mow mow mow success</p>
+		  
+		  <h2>Contact Details</h2>
+			<i class="fa fa-phone" aria-hidden="true"></i>
+			<i class="fa fa-github" aria-hidden="true"></i>
+			<i class="fa fa-envelope" aria-hidden="true"></i>
 		</div>
 		<div class="about_test">
-		  Testimonals
+		  <h2>Testimonals</h2>
+			  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In aliquam nunc quis semper gravida. Aliquam erat volutpat.
+			  <span class="test_name">John Doe</span></p>
+			  <p>Vestibulum sagittis, ligula vel finibus bibendum, mauris nisl tempus risus, ac semper enim elit eu leo.
+			  <span class="test_name">John Doe</span></p>
+			  <p>Curabitur vulputate nulla quis accumsan rhoncus. Curabitur ut neque vulputate, semper risus a, tempor tellus.
+			  <span class="test_name">John Doe</span></p>
 		</div>
 	</div>
     <a href="#portfolio_sec">
 		 <i class="fa fa-chevron-up fa-2x arrow_right"></i>
 	</a>
   </section>
-  
-  <!-- Contact Side Bar -->
-  <div>Side Bar</div>
-	<i class="fa fa-phone" aria-hidden="true"></i>
-	<i class="fa fa-github" aria-hidden="true"></i>
-	<i class="fa fa-envelope" aria-hidden="true"></i>
-  
+ 
   <!-- Footer -->
-  <footer>Portfolio of...</footer>
+  <footer>
+	  <p>Portfolio of Annie Howard &copy 2017</p>
+  </footer>
   
 
 </body>
