Add Div loading

--- a/Odin_project/Etch-a-sketch/index.html
+++ b/Odin_project/Etch-a-sketch/index.html
@@ -13,7 +13,7 @@
   <body>
     <h1>Etch-a-Sketch</h1>
     
-    <div class="box"></div> 
+    <div class="box" id="box"></div> 
     
     <section class="buttons">
       <button>Colour</button>
