Add Clear Function

--- a/Odin_project/Web Development 101/Etch-a-sketch/index.html
+++ b/Odin_project/Web Development 101/Etch-a-sketch/index.html
@@ -19,7 +19,7 @@
       <button id="color">Colour</button>
       <button>Opacity</button>
       <button id="size">Size</button>
-      <button>Clear</button>
+      <button id="clear">Clear</button>
     </section>
     
   </body>
