--- a/Odin_project/HTML and CSS/Youtube Page/index.html
+++ b/Odin_project/HTML and CSS/Youtube Page/index.html
@@ -10,16 +10,18 @@
 	
 <body>
 <nav>
-	<i class="fa fa-bars"></i>
-	<img src="images/logo.png" alt="Youtube Logo">
-	<input type="text">
-	<div><i class="fa fa-search" aria-hidden="true"></i></div>
+	<i class="fa fa-bars fa-lg"></i>
+	<img class="logo" src="images/logo.png" alt="Youtube Logo">
+	<div class="search_bar">
+		<input type="text" placeholder="Search">
+		<div class="search"><i class="fa fa-search" aria-hidden="true"></i></div>
+	</div>
 	
-	<div>
-		<i class="fa fa-upload" aria-hidden="true"></i>
-		<i class="fa fa-th" aria-hidden="true"></i>
-		<i class="fa fa-ellipsis-v" aria-hidden="true"></i>
-		<a href="#">SIGN IN</a>
+	<div class="nav_right">
+		<i class="fa fa-upload fa-lg"></i>
+		<i class="fa fa-th fa-lg"></i>
+		<i class="fa fa-ellipsis-v fa-lg"></i>
+		<a class="sign_in" href="#">SIGN IN</a>
 	</div>
 </nav>
 
