--- a/Odin_project/HTML and CSS/Youtube Page/index.html
+++ b/Odin_project/HTML and CSS/Youtube Page/index.html
@@ -113,42 +113,43 @@
 </main>
 	
 <aside>
-	<p>Up next</p>
-	<img src="images/autoplay.JPG">
-	<img src="images/side_1.JPG" alt="Cat video">
-	<h4>CATS will make you lAUGH<br>YOUR HEAD OFF - Funny CAT</h4>
-	<p>Tiger FunnyWorks<br>Recommended for you</p>
+	<h3>Up next</h3>
+	<img class="autoplay" src="images/autoplay.JPG">
+	<div class="upnext">
+		<img src="images/side_1.JPG" alt="Cat video">
+		<h4>CATS will make you lAUGH<br>YOUR HEAD OFF - Funny CAT</h4>
+		<p class="next_text">Tiger FunnyWorks<br>Recommended for you</p>
+	</div>
 	
 	<img src="images/side_2.JPG">
 		<h4>Funny Pandas [Epic Laughs]</h4>
-		<p>Epic Laughs</p>
-		<p>3.6M views</p>
+		<p>Epic Laughs<br>
+		3.6M views</p>
 	<img src="images/side_3.JPG">	
 		<h4>Panda cub and nanny’s “war"</h4>
-		<p>pandapia HD</p>
-		<p>2.6M views</p>
-	<img src="images/side_4.JPG">
+		<p>pandapia HD<br>
+		2.6M views</p>
 	<img src="images/side_5.JPG">
 		<h4>Playing Pandas Baby Panda [Funny Pets] </h4>
-		<p>Funny Pets</p>
-		<p>1M views</p>
+		<p>Funny Pets<br>
+		1M views</p>
 	<img src="images/side_6.JPG">
 		<h4>Top 200 Highlights of Animals on Vine - FUNNY Animals</h4>
-		<p>GAME PLAY</p>
-		<p>23M views</p>
+		<p>GAME PLAY<br>
+		23M views</p>
 	<img src="images/side_7.JPG">
 		<h4>Special Panda Full Life (Panda Diary) </h4>
-		<p>Jedapar</p>
-		<p>1.4M views</p>
+		<p>Jedapar<br>
+		1.4M views</p>
 	<img src="images/side_8.JPG">
 		<h4>Watch: Playful giant panda can’t let zookeeper go</h4>
-		<p>CGTN</p>
-		<p>3.5M views</p>
+		<p>CGTN<br>
+		3.5M views</p>
 	<img src="images/side_9.JPG">
 		<h4>Zoo Animals vs Kids! | Video Digest</h4>
-		<p>Video Digest, The Ultimate Compilations</p>
-		<p>2M views</p>	
-	<div>SHOW MORE</div>
+		<p>Video Digest, The Ultimate Compilations<br>
+		2M views</p>	
+	<div class="more">SHOW MORE</div>
 </aside>
 
 	
