Add Styling to detail section

--- a/Odin_project/HTML and CSS/Youtube Page/index.html
+++ b/Odin_project/HTML and CSS/Youtube Page/index.html
@@ -27,86 +27,77 @@
 
 <section class="content_con">
 <main>
-	<iframe width="560" height="315" src="https://www.youtube.com/embed/sGF6bOi1NfA" frameborder="0" allowfullscreen></iframe>
+	<iframe width="850" height="480" src="https://www.youtube.com/embed/sGF6bOi1NfA" frameborder="0" allowfullscreen></iframe>
 	
-	<div>
-		<h2>Cute pandas playing on the slide</h2>
-		<p>17,322,195 views</p>
-		<img src="images/likes.JPG">
-		
-		<img src="images/user_logo.JPG">
-		<p>Chengdu PAW
-		Published on Jun 25, 2012
-		
-		What's more entertaining than watching a panda playing on a slide? Watching 4 pandas playing on a slide! :) (A video from the Chengdu Panda Base).</p>
+	<div class="comments">
+		<div class="intro">
+			<h2>Cute pandas playing on the slide</h2>
+			<p>17,322,195 views</p>
+			<img src="images/likes.JPG">
+		</div>
+		<div class="details">
+			<img src="images/user_logo.JPG">
+			<p>
+			<span class="name">Chengdu PAW</span>
+			<span class="date">Published on Jun 25, 2012</span>
 
-		<p>SHOW MORE</p>
-		<div>SUBSCRIBE 15K</div>
+			<span class="text">What's more entertaining than watching a panda playing on a slide? Watching 4 pandas playing on a slide! :) (A video from the Chengdu Panda Base).</span></p>
 
-		<img src="images/comments.JPG">
+			<p>SHOW MORE</p>
+			<div class="subscribe">SUBSCRIBE <span class="sub">15K</span></div>
+		</div>
 		
-		<div>
+			<img src="images/comments.JPG">
+			
+		<div class="replies">
 			<img src="images/profile.png">
-			Rebecca Shaw
-			1 year ago
-			THIS IS SOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO CUTE🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼﻿
-			REPLY
-			206
-
-
-			View all 16 replies
+			<span class="name">Rebecca Shaw</span>
+			<span class="date">1 year ago</span>
+			<span class="text">THIS IS SOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO CUTE🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼</span>
+			<span class="reply">REPLY    206</span>
+			<span class="allrep">View all 16 replies</span>
 			
 			<img src="images/profile.png">
-			James Dooling
-			1 year ago
-			My grandmother's QR code brought me here.
-			REPLY
-			77
+			<span class="name">James Dooling</span>
+			<span class="date">1 year ago</span>
+			<span class="text">My grandmother's QR code brought me here.</span>
+			<span class="reply">REPLY    77</span>
 
 
 			<img src="images/profile.png">
-			Leandro Pithon
-			1 year ago
-			I freaking want this job!﻿
-			REPLY
-			915
-
-			View all 22 replies
+			<span class="name">Leandro Pithon</span>
+			<span class="date">1 year ago</span>
+			<span class="text">I freaking want this job!</span>
+			<span class="reply">REPLY    915</span>
+			<span class="allrep">View all 22 replies</span>
 			
 			<img src="images/profile.png">
-			Countdown w/ Fresh
-			1 year ago
-			I'm so glad my Grandma bought me "The most Epic YouTube videos ever" book so I could find this awesome video!﻿
-			REPLY
-			44
-
-			View reply
+			<span class="name">Countdown w/ Fresh</span>
+			<span class="date">1 year ago</span>
+			<span class="text">I'm so glad my Grandma bought me "The most Epic YouTube videos ever" book so I could find this awesome video!</span>
+			<span class="reply">REPLY    44</span>
+			<span class="allrep">View reply</span>
 			 
 			<img src="images/profile.png">
-			Coolio
-			11 months ago
-			reddit 50/50﻿
-			REPLY
-			401
-
-			View all 25 replies
+			<span class="name">Coolio</span>
+			<span class="date">11 months ago</span>
+			<span class="text">reddit 50/50</span>
+			<span class="reply">REPLY    401</span>
+			<span class="allrep">View all 25 replies</span>
 			
 			<img src="images/profile.png">
-			Gingerbread King
-			1 year ago
-			Can someone tell me what skills I need for this job?﻿
-			REPLY
-			408
-
-			View all 35 replies
+			<span class="name">Gingerbread King</span>
+			<span class="date">1 year ago</span>
+			<span class="text">Can someone tell me what skills I need for this job?</span>
+			<span class="reply">REPLY    408</span>
+			<span class="allrep">View all 35 replies</span>
 			
-			<img src="images/profile.png">
-			11 months ago
-			Oh this is cute. Reddit 50/50 granted me cute
-			REPLY
-			165
-
-			View all 6 replies			
+			<img src="images/profile.png">	
+			<span class="name">Lynn_B0T</span>
+			<span class="date">11 months ago</span>
+			<span class="text">Oh this is cute. Reddit 50/50 granted me</span>
+			<span class="reply">REPLY    165</span>
+			<span class="allrep">View all 6 replies</span>			
 		</div>
 	
 	</div>
