--- a/Odin_project/HTML and CSS/Youtube Page/index.html
+++ b/Odin_project/HTML and CSS/Youtube Page/index.html
@@ -38,12 +38,12 @@
 		<div class="details">
 			<img src="images/user_logo.JPG">
 			<p>
-			<span class="name">Chengdu PAW</span>
+			<span class="name">Chengdu PAW</span><br>
 			<span class="date">Published on Jun 25, 2012</span>
 
 			<span class="text">What's more entertaining than watching a panda playing on a slide? Watching 4 pandas playing on a slide! :) (A video from the Chengdu Panda Base).</span></p>
 
-			<p>SHOW MORE</p>
+			<p class="show">SHOW MORE</p>
 			<div class="subscribe">SUBSCRIBE <span class="sub">15K</span></div>
 		</div>
 		
@@ -53,51 +53,52 @@
 			<img src="images/profile.png">
 			<span class="name">Rebecca Shaw</span>
 			<span class="date">1 year ago</span>
-			<span class="text">THIS IS SOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO CUTE🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼</span>
-			<span class="reply">REPLY    206</span>
-			<span class="allrep">View all 16 replies</span>
+			<span class="text">THIS IS SOOOOOOOOOOO CUTE 🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼🐼</span>
+			<span class="reply">REPLY    206</span><br>
+			<span class="allrep">View all 16 replies</span><br>
 			
 			<img src="images/profile.png">
 			<span class="name">James Dooling</span>
 			<span class="date">1 year ago</span>
 			<span class="text">My grandmother's QR code brought me here.</span>
-			<span class="reply">REPLY    77</span>
+			<span class="reply">REPLY    77</span><br>
+			<span class="allrep">View reply</span><br>
 
 
 			<img src="images/profile.png">
 			<span class="name">Leandro Pithon</span>
 			<span class="date">1 year ago</span>
 			<span class="text">I freaking want this job!</span>
-			<span class="reply">REPLY    915</span>
-			<span class="allrep">View all 22 replies</span>
+			<span class="reply">REPLY    915</span><br>
+			<span class="allrep">View all 22 replies</span><br>
 			
 			<img src="images/profile.png">
 			<span class="name">Countdown w/ Fresh</span>
 			<span class="date">1 year ago</span>
 			<span class="text">I'm so glad my Grandma bought me "The most Epic YouTube videos ever" book so I could find this awesome video!</span>
-			<span class="reply">REPLY    44</span>
-			<span class="allrep">View reply</span>
+			<span class="reply">REPLY    44</span><br>
+			<span class="allrep">View reply</span><br>
 			 
 			<img src="images/profile.png">
 			<span class="name">Coolio</span>
 			<span class="date">11 months ago</span>
 			<span class="text">reddit 50/50</span>
-			<span class="reply">REPLY    401</span>
-			<span class="allrep">View all 25 replies</span>
+			<span class="reply">REPLY    401</span><br>
+			<span class="allrep">View all 25 replies</span><br>
 			
 			<img src="images/profile.png">
 			<span class="name">Gingerbread King</span>
 			<span class="date">1 year ago</span>
 			<span class="text">Can someone tell me what skills I need for this job?</span>
-			<span class="reply">REPLY    408</span>
-			<span class="allrep">View all 35 replies</span>
+			<span class="reply">REPLY    408</span><br>
+			<span class="allrep">View all 35 replies</span><br>
 			
 			<img src="images/profile.png">	
 			<span class="name">Lynn_B0T</span>
 			<span class="date">11 months ago</span>
 			<span class="text">Oh this is cute. Reddit 50/50 granted me</span>
-			<span class="reply">REPLY    165</span>
-			<span class="allrep">View all 6 replies</span>			
+			<span class="reply">REPLY    165</span><br>
+			<span class="allrep">View all 6 replies</span><br>		
 		</div>
 	
 	</div>
