--- a/Free_code_camp/Pomodoro/index.html
+++ b/Free_code_camp/Pomodoro/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<title>Pomodoro</title>
 		<meta charset="UTF-8">
+		<meta name=viewport content="width=device-width, initial-scale=1">
 		<link href="https://fonts.googleapis.com/css?family=Orbitron|Roboto+Condensed" rel="stylesheet">
 		<script src="https://use.fontawesome.com/f37781fe0a.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
